--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "es6",
+		"module": "commonjs",
 		"target": "es6",
 		"outDir": "./out",
 		"rootDir": "./src",
@@ -8,14 +8,14 @@
 			"es6"
 		],
 		"sourceMap": true,
-		"removeComments": true
+		"removeComments": true,
+		"strict": true
 	},
 	"include": [
 		"src"
 	],
 	"exclude": [
 		"node_modules",
-		".vscode-test",
 		"src/test"
 	]
 }
