--- a/package.json
+++ b/package.json
@@ -20,16 +20,20 @@
         "start": "node ./out/index.js"
     },
     "devDependencies": {
+        "@types/ip": "^1.1.0",
         "@types/mocha": "^5.2.5",
         "@types/node": "^10.12.18",
         "@types/power-assert": "^1.5.0",
+        "@types/websocket": "0.0.40",
         "ts-node": "^8.0.2",
         "tslint": "^5.12.1",
         "typescript": "^3.2.2"
     },
     "dependencies": {
+        "ip": "^1.1.5",
         "mocha": "^5.2.0",
         "power-assert": "^1.6.1",
-        "say": "^0.15.0"
+        "say": "^0.15.0",
+        "websocket": "^1.0.28"
     }
 }
