--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "typescript": "^3.2.2"
     },
     "dependencies": {
+        "child_process": "^1.0.2",
         "ip": "^1.1.5",
         "mocha": "^5.2.0",
         "power-assert": "^1.6.1",
