--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "@types/ip": "^1.1.0",
+        "@types/jsdom": "^12.2.3",
         "@types/mocha": "^5.2.5",
         "@types/node": "^10.12.18",
         "@types/power-assert": "^1.5.0",
@@ -33,6 +34,7 @@
     "dependencies": {
         "child_process": "^1.0.2",
         "ip": "^1.1.5",
+        "jsdom": "^14.0.0",
         "mocha": "^5.2.0",
         "power-assert": "^1.6.1",
         "say": "^0.15.0",
