--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
     "description": "A powerful tool for SPGoding's personal use.",
     "main": "./out/index",
     "author": "SPGoding",
-    "contributors": [
-
-    ],
+    "contributors": [],
     "license": "GPL-3.0-only",
     "repository": {
         "type": "git",
@@ -23,6 +21,7 @@
         "start": "node ./out/index.js"
     },
     "devDependencies": {
+        "@types/fs-extra": "^5.0.5",
         "@types/ip": "^1.1.0",
         "@types/jsdom": "^12.2.3",
         "@types/mocha": "^5.2.6",
@@ -35,6 +34,7 @@
     },
     "dependencies": {
         "child_process": "^1.0.2",
+        "fs-extra": "^7.0.1",
         "ip": "^1.1.5",
         "jsdom": "^14.0.0",
         "mocha": "^5.2.0",
