--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "./out/index",
     "author": "SPGoding",
     "contributors": [],
-    "license": "GPL-3.0-only",
+    "license": "ISC",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/SPGoding/spx.git"
@@ -27,6 +27,8 @@
         "@types/mocha": "^5.2.6",
         "@types/node": "^10.14.4",
         "@types/power-assert": "^1.5.0",
+        "@types/request": "^2.48.1",
+        "@types/request-promise-native": "^1.0.15",
         "@types/websocket": "0.0.40",
         "ts-node": "^8.1.0",
         "tslint": "^5.16.0",
@@ -39,6 +41,8 @@
         "jsdom": "^14.0.0",
         "mocha": "^5.2.0",
         "power-assert": "^1.6.1",
+        "request": "^2.88.0",
+        "request-promise-native": "^1.0.7",
         "say": "^0.15.0",
         "websocket": "^1.0.28"
     }
