--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "typescript": "^3.4.4"
     },
     "dependencies": {
+        "clipboard": "^2.0.4",
         "fs-extra": "^7.0.1",
         "jsdom": "^14.0.0",
         "mocha": "^5.2.0",
