--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
 		],
 		"sourceMap": true,
 		"removeComments": true,
-		"strict": true
+		"strict": true,
+		"newLine": "LF"
 	},
 	"include": [
 		"src"
