:sparkles: Support auto translate author names

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     },
     "homepage": "https://github.com/SPGoding/spx#readme",
     "scripts": {
+        "build": "tsc -b",
         "test": "mocha --opts ./mocha.opts",
-        "compile": "tsc -b",
         "watch": "tsc -b -w",
         "start": "node ./out/index.js"
     },
