--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "@types/fs-extra": "^8.0.0",
+        "@types/image-size": "^0.8.0",
         "@types/jsdom": "^16.0.0",
         "@types/mocha": "^7.0.0",
         "@types/node": "^13.0.0",
@@ -36,6 +37,7 @@
     "dependencies": {
         "clipboard": "^2.0.4",
         "fs-extra": "^8.0.0",
+        "image-size": "^0.8.3",
         "jsdom": "^16.0.0",
         "mocha": "^7.0.0",
         "power-assert": "^1.6.1",
