--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"outDir": "./out",
 		"rootDir": "./src",
 		"lib": [
-			"es6"
+			"es6",
+			"DOM"
 		],
 		"sourceMap": true,
 		"removeComments": true,
