--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "discord.js": "^12.5.1",
         "fs-extra": "^9.0.1",
         "image-size": "^0.9.3",
+        "jira.js": "^2.0.2",
         "jsdom": "^16.0.0",
         "mocha": "^8.2.1",
         "power-assert": "^1.6.1",
