--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "start": "node ./out/index.js"
     },
     "devDependencies": {
+        "@types/express": "^4.17.11",
         "@types/fs-extra": "^9.0.4",
         "@types/image-size": "^0.8.0",
         "@types/jsdom": "^16.0.0",
@@ -38,6 +39,7 @@
     "dependencies": {
         "clipboard": "^2.0.4",
         "discord.js": "^12.5.1",
+        "express": "^4.17.1",
         "fs-extra": "^9.0.1",
         "image-size": "^0.9.3",
         "jira.js": "^2.0.2",
