--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "request": "^2.88.0",
         "request-promise-native": "^1.0.7",
         "say": "^0.16.0",
+        "twitter-lite": "^1.1.0",
         "websocket": "^1.0.28"
     }
 }
