--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
         "@types/jsdom": "^16.0.0",
         "@types/mocha": "^8.2.0",
         "@types/node": "^14.0.0",
+        "@types/node-fetch": "^2.5.10",
         "@types/power-assert": "^1.5.0",
         "@types/request": "^2.48.1",
-        "@types/request-promise-native": "^1.0.16",
         "@types/websocket": "1.0.2",
         "@types/ws": "^7.4.0",
         "ts-node": "^9.1.1",
@@ -46,9 +46,9 @@
         "jira.js": "^2.0.2",
         "jsdom": "^16.0.0",
         "mocha": "^8.2.1",
+        "node-fetch": "^2.6.1",
         "power-assert": "^1.6.1",
         "request": "^2.88.0",
-        "request-promise-native": "^1.0.7",
         "say": "^0.16.0",
         "twitter-lite": "^1.1.0",
         "websocket": "^1.0.28"
