--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/node-fetch": "^2.5.10",
         "@types/power-assert": "^1.5.0",
         "@types/request": "^2.48.1",
+        "@types/tampermonkey": "^4.0.1",
         "@types/websocket": "1.0.2",
         "@types/ws": "^7.4.0",
         "ts-node": "^9.1.1",
