--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
         "@types/ws": "^7.4.0",
         "ts-node": "^9.1.1",
         "tslint": "^6.0.0",
-        "typescript": "^4.1.2"
+        "typescript": "^4.3.5"
     },
     "dependencies": {
         "clipboard": "^2.0.4",
         "discord-api-types": "^0.18.1",
-        "discord.js": "github:discordjs/discord.js",
+        "discord.js": "13.0.0-dev.2e078e4.1625529824",
         "express": "^4.17.1",
         "fs-extra": "^9.0.1",
         "image-size": "^1.0.0",
