Fix discord.js types

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     },
     "dependencies": {
         "clipboard": "^2.0.4",
-        "discord-api-types": "^0.18.1",
-        "discord.js": "13.0.0-dev.2e078e4.1625529824",
+        "discord-api-types": "^0.24.0",
+        "discord.js": "^13.3.1",
         "express": "^4.17.1",
         "fs-extra": "^9.0.1",
         "image-size": "^1.0.0",
